Version 2.02.52 -
=================================
  Enforce an alphabetical lock ordering for vgname locks.
  Refactor vgsplit, vgmerge, and vgrename to obey vgname ordering rules.
  Implement write lock prioritisation for file locking and make it default.
  Fix clogd build direcory.
  Drop unrequired clogd Makefile.
  Fix clvmd autodetection check and cleanup related configure messages.
  Fix Makefile distclean target.
  Make clvmd check corosync to see what cluster interface it should use.
  Rewrite clvmd configuration code to cope with all combinations of libs.
  Fix global locking in PV reporting commands (2.02.49).
  Fix pvcreate string termination in duplicate uuid warning message.
  Fix pvcreate on a partition (2.02.51).
  Fix vgcfgrestore error paths when locking fails (2.02.49).
  Added configure --enable-cmirrord to build the cluster mirror log daemon.
  Make lvchange --refresh only take a read lock on volume group.
  Fix bug where non-blocking file locks could be granted in error.
  Make lvm2app pv_t, lv_t, vg_t handle definitions consistent with lvm_t.
  Fix vgextend error path - if ORPHAN lock fails, unlock / release vg (2.02.49).
  Fix compile warning in clvmd.
  Update lv{convert|create|extend|resize} man pages - clarify use of PE ranges.
  Remove useless _pv_write wrapper.
  Update test/api/test.c to call lvm_vg_create and lvm_vg_remove.

Version 2.02.51 - 6th August 2009
=================================
  Fix locking in clvmd (2.02.50).
  Add --noudevsync option for relevant LVM tools.
  Add activation/udev_sync to lvm.conf.
  Only change LV symlinks on ACTIVATE not PRELOAD.
  Make lvconvert honour log mirror options combined with downconversion.
  Allow LV suspend while --ignorelockingfailure is in force.
  Update synopsis in lvconvert manpage to mention --repair.
  Set cookies in activation code and wait for udev to complete processing.
  Added configure --enable-udev_rules --enable-udev_sync.